# amplifier-module-hooks-workspace-boundary

./: DESIGN.md  README.md  dtu-profile.yaml  pyproject.toml
amplifier_module_hooks_workspace_boundary/: __init__.py  bash_parser.py  boundary.py  config.py
docs/: examples.md
test-bundle/: bundle.md
test-bundle/behaviors/: workspace-boundary.yaml
tests/: conftest.py  test_bash_parser.py  test_boundary.py  test_config.py  test_hook.py
