[project]
name = "amplifier-module-hooks-workspace-boundary"
version = "0.1.0"
description = "Amplifier hook module that enforces filesystem workspace boundaries"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.entry-points."amplifier.modules"]
hooks-workspace-boundary = "amplifier_module_hooks_workspace_boundary:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_workspace_boundary"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
